--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.6",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^10.0.0-alpha.2",
+    "@types/three": "^0.182.0",
+    "framer-motion-3d": "^12.4.13",
+    "motion": "^12.29.2",
     "next": "16.1.6",
+    "or": "^0.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.9.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
